fixed another typo

--- a/modeling_script.html
+++ b/modeling_script.html
@@ -131,42 +131,42 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <td style="text-align: left;">Strain_1</td>
 <td style="text-align: right;">1</td>
 <td style="text-align: right;">104.96714</td>
-<td style="text-align: right;">112.4381</td>
+<td style="text-align: right;">110.2547</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">2</td>
 <td style="text-align: left;">Strain_2</td>
 <td style="text-align: right;">1</td>
 <td style="text-align: right;">199.52016</td>
-<td style="text-align: right;">208.0411</td>
+<td style="text-align: right;">205.8578</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: left;">Strain_3</td>
 <td style="text-align: right;">1</td>
 <td style="text-align: right;">309.26304</td>
-<td style="text-align: right;">318.8340</td>
+<td style="text-align: right;">316.6506</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
 <td style="text-align: left;">Strain_4</td>
 <td style="text-align: right;">1</td>
 <td style="text-align: right;">420.89253</td>
-<td style="text-align: right;">431.5135</td>
+<td style="text-align: right;">429.3301</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
 <td style="text-align: left;">Strain_5</td>
 <td style="text-align: right;">1</td>
 <td style="text-align: right;">506.70680</td>
-<td style="text-align: right;">518.3778</td>
+<td style="text-align: right;">516.1944</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
 <td style="text-align: left;">Strain_1</td>
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">99.87814</td>
-<td style="text-align: right;">112.5991</td>
+<td style="text-align: right;">110.4158</td>
 </tr>
 </tbody>
 </table>
@@ -225,18 +225,18 @@ Residuals:
 
 Coefficients:
                Estimate Std. Error t value Pr(&gt;|t|)    
-StrainStrain_1  89.5313     5.3720   16.67   &lt;2e-16 ***
-StrainStrain_2 199.7169     5.4619   36.56   &lt;2e-16 ***
-StrainStrain_3 308.4725     5.5544   55.54   &lt;2e-16 ***
-StrainStrain_4 410.8168     5.6494   72.72   &lt;2e-16 ***
-StrainStrain_5 525.3986     5.7468   91.42   &lt;2e-16 ***
+StrainStrain_1  87.3479     5.3720   16.26   &lt;2e-16 ***
+StrainStrain_2 197.5335     5.4619   36.17   &lt;2e-16 ***
+StrainStrain_3 306.2892     5.5544   55.14   &lt;2e-16 ***
+StrainStrain_4 408.6334     5.6494   72.33   &lt;2e-16 ***
+StrainStrain_5 523.2153     5.7468   91.05   &lt;2e-16 ***
 Inject_order     2.2696     0.1505   15.08   &lt;2e-16 ***
 ---
 Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 
 Residual standard error: 13.03 on 39 degrees of freedom
 Multiple R-squared:  0.999, Adjusted R-squared:  0.9989 
-F-statistic:  6808 on 6 and 39 DF,  p-value: &lt; 2.2e-16</code></pre>
+F-statistic:  6739 on 6 and 39 DF,  p-value: &lt; 2.2e-16</code></pre>
 </div>
 </div>
 <p><strong>Now extract the coefficient for the injection order and use this to calculate a corrected PA</strong></p>
@@ -287,7 +287,7 @@ F-statistic:  6808 on 6 and 39 DF,  p-value: &lt; 2.2e-16</code></pre>
 </div>
 </div>
 </div>
-<p>As expected, the boxplot shows that the variance among replicates is much better after the corrected.</p>
+<p>As expected, the boxplot shows that the variance among replicates is much better after the correction.</p>
 </section>
 
 </main>
